load("@//:config.bzl", "package_copt")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "thread_fizzbuzz",
    srcs = ["thread_fizzbuzz.cpp"],
    copts = package_copt,
    deps = [],
)

cc_binary(
    name = "data_race",
    srcs = ["data_race.cpp"],
    copts = package_copt,
    deps = [],
)

cc_binary(
    name = "deadlock",
    srcs = ["deadlock.cpp"],
    copts = package_copt,
    deps = [],
)

cc_binary(
    name = "thread_local_example",
    srcs = ["thread_local_example.cpp"],
    copts = package_copt,
    deps = [],
)

cc_binary(
    name = "lazy_initalization",
    srcs = ["lazy_initialization.cpp"],
    copts = package_copt,
    deps = [],
)

cc_binary(
    name = "dining_philosophers_problem",
    srcs = ["dining_philosophers_problem.cpp"],
    copts = package_copt,
    deps = [],
)
