load("//:convenience_def.bzl", "generate_cc_binary_targets")

package(default_visibility = ["//visibility:public"])

generate_cc_binary_targets(
    [
        "data_race",
        "deadlock",
        "dining_philosophers_problem",
        "lazy_initialization",
        "thread_fizzbuzz",
        "thread_local_example",
    ],
)
