load("//:convenience_def.bzl", "generate_cc_binary_targets")
load(":targets.bzl", "modern_cpp_concurrency_udemy_binary_target_list")

package(default_visibility = ["//visibility:public"])

generate_cc_binary_targets(modern_cpp_concurrency_udemy_binary_target_list,
                            headers = ["concurrent_queue.h",
                                "concurrent_queue_cv.h",
                                "thread_pool.h",
                                "thread_pool.cpp",
                                "thread_pool_multi_queue.h",
                                "thread_pool_multi_queue.cpp",
                                "thread_pool_cycle_stealing.h",
                                "thread_pool_cycle_stealing.cpp"])
